--- a/config/api.yml
+++ b/config/api.yml
@@ -1,45 +1,69 @@
-v1:
-  ping:
-    path: /admin/ping
-    response_key: status
+admin:
+  base_path: admin
+  api:
+    ping:
+      desc: GET /admin/ping
+      path: ping
+      fetch_key: status
 
-  schema:
-    path: /schema
-    response_key: schema
-
-  schema_name:
-    path: /schema/name
-    response_key: name
-
-  schema_version:
-    path: /schema/version
-    response_key: version
-
-  fields:
-    path: /schema/fields
-    response_key: fields
-
-  field:
-    path: /schema/fields/%{name}
-    response_key: field
-
-  unique_key:
-    path: /schema/uniquekey
-    response_key: uniqueKey
-
-  field_types:
-    path: /schema/fieldtypes
-    response_key: fieldTypes
-
-  field_type:
-    path: /schema/fieldtypes/%{name}
-    response_key: fieldType
-
-  update:
-    path: /update
-
-  update_json:
-    path: /update/json
-
-  update_json_docs:
-    path: /update/json/docs
+schema:
+  base_path: schema
+  api:
+    info:
+      desc: GET /schema
+      fetch_key: schema
+    name:
+      desc: GET /schema/name
+      method_name: schema_name
+      path: name
+      fetch_key: name
+    version:
+      desc: GET /schema/version
+      path: version
+      fetch_key: version
+    unique_key:
+      desc: GET /schema/uniquekey
+      path: uniquekey
+      fetch_key: uniqueKey
+    similarity:
+      desc: GET /schema/similarity
+      path: similarity
+      fetch_key: similarity
+    fields:
+      desc: GET /schema/fields
+      path: fields
+      params:
+        showDefaults: true
+      enum_on: fields
+    field:
+      desc: GET /schema/fields/[name]
+      path: fields/%{name}
+      args:
+        - name
+      params:
+        showDefaults: true
+      fetch_key: field
+    field_types:
+      desc: GET /schema/fieldtypes
+      path: fieldtypes
+      enum_on: fieldTypes
+    field_type:
+      desc: GET /schema/fieldtype/[name]
+      path: fieldtypes/%{name}
+      args:
+        - name
+      fetch_key: fieldType
+    dynamic_fields:
+      desc: GET /schema/dynamicfields
+      path: dynamicfields
+      enum_on: dynamicFields
+    dynamic_field:
+      desc: GET /schema/dynamicfields/[name]
+      args:
+        - name
+      path: dynamicfields/%{name}
+      fetch_key: dynamicField
+    copy_fields:
+      desc: GET /schema/copyfields
+      path: copyfields
+      enum_on: copyFields
